# HPC101_homework

./: README.md
docs/superpowers/specs/: 2026-07-22-riscv-rvv-scheme-c-design.md  2026-07-22-shared-expert-amx-batching-design.md
lab2/: CMakeLists.txt  main.cpp
lab2/include/: moe.h
lab2/src/: data.cpp  moe_ref.cpp
lab2/student/: moe_opt.cpp
